# dbus-experiments

./: Makefile  docker-compose.yml
broker/: Dockerfile  broker.conf
broker/dbus/services/: com.github.radium226.Experiment.service
dbus/: Makefile
dbus/broker/dbus/: broker.conf
dbus/make/: run.sh
dbus/player/: Dockerfile
dbus/streamer/: Dockerfile
dbus/streamer/streamer/: main.py
player/: pyproject.toml
player/player/: main.py
redis/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
redis/streaming/: main.py
streamer/: pyproject.toml
streamer/streamer/: main.py
zeromq/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
zeromq/streaming/: main.py  size.py
