[tool.poetry]
name = "streamer"
version = "0.1.0"
description = "Streamer"
authors = ["radium226"]

[tool.poetry.dependencies]
python = "^3.8"
dbus-python = "^1.2.*"
pygobject = "^3.36.*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
streamer = 'streamer:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

